# ostiarius

./: Cargo.toml  LICENSE  NEWS.md  README.md
ostiarius-client/: Cargo.toml
ostiarius-client/src/: main.rs
ostiarius-core/: Cargo.toml
ostiarius-core/src/: authorization.rs  crypto.rs  error.rs  lib.rs  utils.rs
ostiarius-core/src/crypto/: key.rs  mod.rs  openssl.rs  password.rs  pkcs11.rs
ostiarius-core/src/crypto/openssl/: key.rs
ostiarius-core/src/crypto/pkcs11/: key.rs  url.rs
ostiarius-server/: Cargo.toml  LICENSE  README.md
ostiarius-server/src/: config.rs  lib.rs  main.rs  models.rs
ostiarius-server/src/http/: authorizations.rs  index.rs  mod.rs
tests/: authorizations.toml  client1.privkey.pem  client2.privkey.pem  server.privkey.pem  server.pubkey.pem
