[package]
name = "ostiarius-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Ostiarius client program"

[features]
default = ["pkcs11"]
pkcs11 = ["ostiarius-core/pkcs11"]

[dependencies]
anyhow = "1.0.59"
gumdrop = "0.8.1"
hostname = "0.3.1"
ostiarius-core = { path = "../ostiarius-core", default-features = false }
reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "json"] }
uuid = "1.1.2"
