[package]
name = "ostiarius-core"
version = "0.1.1"
authors = ["Eric Le Bihan <eric.le.bihan.dev@free.fr>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
cryptoki = "0.3.0"
openssl = {version = "0.10", features = ["vendored"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.31"
toml = "0.5"
url = "2.2.2"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
