[package]
name = "ostiarius-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Ostiarius core functions"

[features]
default = ["pkcs11"]
visible_password = []
pkcs11 = ["dep:cryptoki"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
cryptoki = { version = "0.3.0", optional = true }
openssl = {version = "0.10", features = ["vendored"] }
percent-encoding = "2.2.0"
rand = "0.8.5"
rpassword = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.31"
toml = "0.5"
url = "2.2.2"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
