[package]
name = "ostiarius-server"
version = "0.3.1"
authors = ["Eric Le Bihan <eric.le.bihan.dev@free.fr>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"
axum = { version = "0.5.13", features = ["macros"] }
chrono = { version = "0.4.19", features = ["serde"] }
cryptoki = "0.3.0"
gumdrop = "0.8.1"
ostiarius-core = { path = "../ostiarius-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["full"] }
tower = "0.4.13"
uuid = "1.1.2"
